--- a/mangaedenapiswift/Base.lproj/Main.storyboard
+++ b/mangaedenapiswift/Base.lproj/Main.storyboard
@@ -36,8 +36,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="SgQ-dw-2Zo" kind="relationship" relationship="viewControllers" id="Hox-td-bMq"/>
-                        <segue destination="LKp-D7-IZ1" kind="relationship" relationship="viewControllers" id="jQX-ze-406"/>
+                        <segue destination="LKp-D7-IZ1" kind="relationship" relationship="viewControllers" id="a7M-SG-2Xb"/>
+                        <segue destination="SgQ-dw-2Zo" kind="relationship" relationship="viewControllers" id="65E-pM-FfR"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pJA-S3-f65" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -52,7 +52,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Cxg-sd-uau">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="Cxg-sd-uau">
                             <size key="itemSize" width="120" height="150"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
