--- a/mangaedenapiswift/Base.lproj/Main.storyboard
+++ b/mangaedenapiswift/Base.lproj/Main.storyboard
@@ -17,6 +17,15 @@
                     <view key="view" contentMode="scaleToFill" id="H5E-MP-THu">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Soon to be released." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w4A-Ar-kyI">
+                                <rect key="frame" x="108" y="270" width="158" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="Atn-Qi-ZJd"/>
                     </view>
@@ -36,7 +45,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="LKp-D7-IZ1" kind="relationship" relationship="viewControllers" id="a7M-SG-2Xb"/>
+                        <segue destination="ByS-6v-wRc" kind="relationship" relationship="viewControllers" id="a7M-SG-2Xb"/>
                         <segue destination="SgQ-dw-2Zo" kind="relationship" relationship="viewControllers" id="65E-pM-FfR"/>
                     </connections>
                 </tabBarController>
@@ -60,11 +69,136 @@
                         </collectionViewFlowLayout>
                         <cells/>
                     </collectionView>
-                    <tabBarItem key="tabBarItem" systemItem="search" id="koM-vx-Fzw"/>
+                    <navigationItem key="navigationItem" id="God-JJ-cAl"/>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bxo-hx-PfM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1234.4000000000001" y="484.40779610194909"/>
+            <point key="canvasLocation" x="-438" y="484"/>
+        </scene>
+        <!--Manga Description Controller-->
+        <scene sceneID="7lr-9x-7Qo">
+            <objects>
+                <viewController storyboardIdentifier="mangaDescription" id="lvs-sK-QJg" customClass="MangaDescriptionController" customModule="mangaedenapiswift" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="53b-zD-tei">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="MangaTitle" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5qY-MR-CFH">
+                                <rect key="frame" x="158" y="0.0" width="201" height="36"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1vo-z0-Fta">
+                                <rect key="frame" x="0.0" y="381" width="375" height="216"/>
+                            </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O90-eM-sme">
+                                <rect key="frame" x="152" y="617" width="71" height="30"/>
+                                <state key="normal" title="Read"/>
+                                <connections>
+                                    <segue destination="a2S-Lo-S6R" kind="show" identifier="readChapterSegue" id="LtZ-kS-vmT"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fAh-ol-YfS">
+                                <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="fYq-Bd-LW0"/>
+                                    <constraint firstAttribute="width" constant="150" id="omL-lY-9Nx"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="MangaAuthor" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1q8-G9-IHr">
+                                <rect key="frame" x="158" y="44" width="209" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FUj-Ca-xqB">
+                                <rect key="frame" x="8" y="158" width="359" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="fAh-ol-YfS" firstAttribute="top" secondItem="53b-zD-tei" secondAttribute="top" id="18P-Ao-pOj"/>
+                            <constraint firstItem="1vo-z0-Fta" firstAttribute="trailing" secondItem="dzQ-NQ-H46" secondAttribute="trailing" id="56Q-DP-ddW"/>
+                            <constraint firstItem="dzQ-NQ-H46" firstAttribute="trailing" secondItem="1q8-G9-IHr" secondAttribute="trailing" constant="8" id="754-tx-KZv"/>
+                            <constraint firstItem="fAh-ol-YfS" firstAttribute="leading" secondItem="dzQ-NQ-H46" secondAttribute="leading" id="Io5-rs-E2T"/>
+                            <constraint firstItem="fAh-ol-YfS" firstAttribute="leading" secondItem="dzQ-NQ-H46" secondAttribute="leading" id="PUs-85-wwX"/>
+                            <constraint firstItem="dzQ-NQ-H46" firstAttribute="trailing" secondItem="FUj-Ca-xqB" secondAttribute="trailing" constant="8" id="ROe-FD-Ty1"/>
+                            <constraint firstItem="FUj-Ca-xqB" firstAttribute="leading" secondItem="dzQ-NQ-H46" secondAttribute="leading" constant="8" id="UPi-aD-Fcp"/>
+                            <constraint firstItem="dzQ-NQ-H46" firstAttribute="bottom" secondItem="O90-eM-sme" secondAttribute="bottom" constant="20" id="crl-hs-JNF"/>
+                            <constraint firstItem="O90-eM-sme" firstAttribute="top" secondItem="1vo-z0-Fta" secondAttribute="bottom" constant="20" id="e3H-xD-UzU"/>
+                            <constraint firstItem="O90-eM-sme" firstAttribute="top" secondItem="1vo-z0-Fta" secondAttribute="bottom" constant="20" id="eSe-3d-GrQ"/>
+                            <constraint firstItem="FUj-Ca-xqB" firstAttribute="top" secondItem="fAh-ol-YfS" secondAttribute="bottom" constant="8" id="lc1-aI-xbF"/>
+                            <constraint firstItem="1q8-G9-IHr" firstAttribute="leading" secondItem="fAh-ol-YfS" secondAttribute="trailing" constant="8" id="oG0-w0-hxu"/>
+                            <constraint firstItem="fAh-ol-YfS" firstAttribute="top" secondItem="53b-zD-tei" secondAttribute="top" id="pG7-J6-gra"/>
+                            <constraint firstItem="1vo-z0-Fta" firstAttribute="leading" secondItem="dzQ-NQ-H46" secondAttribute="leading" id="qdP-tt-gD2"/>
+                            <constraint firstItem="1q8-G9-IHr" firstAttribute="top" secondItem="5qY-MR-CFH" secondAttribute="bottom" constant="8" id="u2J-kx-ZuU"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="dzQ-NQ-H46"/>
+                    </view>
+                    <connections>
+                        <outlet property="mangaAuthorLabel" destination="1q8-G9-IHr" id="UeF-is-tf3"/>
+                        <outlet property="mangaDescriptionLabel" destination="FUj-Ca-xqB" id="tEI-V3-shd"/>
+                        <outlet property="mangaImage" destination="fAh-ol-YfS" id="dfn-Z6-Hqd"/>
+                        <outlet property="mangaPicker" destination="1vo-z0-Fta" id="mB5-1Y-ebH"/>
+                        <outlet property="mangaTitleLabel" destination="5qY-MR-CFH" id="RoR-go-0B1"/>
+                        <outlet property="readChapter" destination="O90-eM-sme" id="X3L-nl-S7r"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="008-aG-XB1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="485.60000000000002" y="483.50824587706148"/>
+        </scene>
+        <!--Read Chapter Controller-->
+        <scene sceneID="qGJ-cl-I30">
+            <objects>
+                <viewController id="a2S-Lo-S6R" customClass="ReadChapterController" customModule="mangaedenapiswift" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="OWv-OO-xgv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IUJ-F3-bas">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="IUJ-F3-bas" firstAttribute="top" secondItem="Wke-4o-ggl" secondAttribute="top" id="AJi-cl-woK"/>
+                            <constraint firstItem="Wke-4o-ggl" firstAttribute="trailing" secondItem="IUJ-F3-bas" secondAttribute="trailing" id="FxG-cf-Nci"/>
+                            <constraint firstItem="Wke-4o-ggl" firstAttribute="bottom" secondItem="IUJ-F3-bas" secondAttribute="bottom" id="Ska-3M-kxf"/>
+                            <constraint firstItem="IUJ-F3-bas" firstAttribute="leading" secondItem="Wke-4o-ggl" secondAttribute="leading" id="VCj-MQ-sws"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Wke-4o-ggl"/>
+                    </view>
+                    <connections>
+                        <outlet property="imageScrollView" destination="IUJ-F3-bas" id="uab-6j-dug"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JtQ-1B-eTf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1385" y="484"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="PRO-ko-FCE">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ByS-6v-wRc" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" systemItem="search" id="koM-vx-Fzw"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="bua-ub-uJj">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="LKp-D7-IZ1" kind="relationship" relationship="rootViewController" id="KZc-3R-DwL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qlz-8e-W6c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1235.2" y="483.95802098950526"/>
         </scene>
     </scenes>
 </document>
